--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
     "repository": {
     "type": "git",
-    "url": "git+https://github.com/flashVT/OVRTest.git"
+    "url": "git+https://github.com/flashVT/OVR_Framework_Package.git"
   },
   "samples": [
    {
